Parameterized docker DB passwords.

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 
+.docker.env
+
 # Created by https://www.gitignore.io/api/intellij
 # Edit at https://www.gitignore.io/?templates=intellij
 
