--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,13 +39,15 @@ services:
   db:
     image: mysql:8.0.19
     container_name: db
+    env_file:
+      - .docker.env
     restart: unless-stopped
     tty: true
     ports:
       - "3306:3306"
     environment:
-      MYSQL_DATABASE: laravel
-      MYSQL_ROOT_PASSWORD: yoloyolo
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       SERVICE_TAGS: dev
       SERVICE_NAME: mysql
     volumes:
